--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "dependencies": {
     "axios": "^1.7.9",
     "cors": "^2.8.5",
-    "cra-template": "1.2.0",
+    "cra-template": "^1.2.0",
     "font-awesome": "^4.7.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-scripts": "5.0.1",
+    "react-router-dom": "^7.1.1",
+    "react-scripts": "^5.0.1",
     "swiper": "^11.1.15"
   },
   "scripts": {
