--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.1",
     "react-scripts": "^5.0.1",
+    "styled-components": "^6.1.14",
     "swiper": "^11.1.15"
   },
   "scripts": {
