--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
     "cors": "^2.8.5",
     "cra-template": "^1.2.0",
     "font-awesome": "^4.7.0",
+    "i18next": "^24.2.1",
+    "i18next-browser-languagedetector": "^8.0.2",
+    "i18next-http-backend": "^3.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-i18next": "^15.4.0",
     "react-router-dom": "^7.1.1",
     "react-scripts": "^5.0.1",
     "styled-components": "^6.1.14",
