--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "cors": "^2.8.5",
     "cra-template": "^1.2.0",
     "font-awesome": "^4.7.0",
-    "i18next": "^24.2.1",
+    "i18next": "^23.16.8",
     "i18next-browser-languagedetector": "^8.0.2",
     "i18next-http-backend": "^3.0.1",
     "react": "^19.0.0",
@@ -18,8 +18,7 @@
     "react-router-dom": "^7.1.1",
     "react-scripts": "^5.0.1",
     "styled-components": "^6.1.14",
-    "swiper": "^11.2.0",
-    "typescript": "^4.9.5"
+    "swiper": "^11.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
